--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Custom css file -->
     <link href="assets/css/style.css" rel="stylesheet" />
-    <title>Photo Ninja</title>
+    <title>Materialize-css</title>
   </head>
   <body>
     <!-- navbar -->
@@ -49,7 +49,59 @@
       </nav>
     </header>
     <!-- photo / grid -->
-
+    <section class="container section" id="photo's">
+      <div class="row">
+        <div class="col s12 l4">
+          <img
+            src="img/portrait.jpg"
+            alt="portrait"
+            class="responsive-img materialboxed"
+          />
+        </div>
+        <div class="col s12 l6 offset-l1">
+          <h2 class="indigo-text text-darken-4">Portrait</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+            vitae tellus ut sapien commodo tristique in sed eros. Morbi tempus
+            sit amet felis a tempor.
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 l4 push-l7 offset-l1">
+          <img
+            src="img/city.jpg"
+            alt="portrait"
+            class="responsive-img materialboxed"
+          />
+        </div>
+        <div class="col s12 l6 pull-l5 right-align offset-l1">
+          <h2 class="indigo-text text-darken-4">Cityscapes</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+            vitae tellus ut sapien commodo tristique in sed eros. Morbi tempus
+            sit amet felis a tempor.
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 l4">
+          <img
+            src="img/nature.jpg"
+            alt="portrait"
+            class="responsive-img materialboxed"
+          />
+        </div>
+        <div class="col s12 l6 offset-l1">
+          <h2 class="indigo-text text-darken-4">Nature</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+            vitae tellus ut sapien commodo tristique in sed eros. Morbi tempus
+            sit amet felis a tempor.
+          </p>
+        </div>
+      </div>
+    </section>
     <!-- parallax -->
 
     <!-- services / tabs -->
