add parallax section

--- a/index.html
+++ b/index.html
@@ -103,7 +103,70 @@
       </div>
     </section>
     <!-- parallax -->
-
+    <div class="parallax-container">
+      <div class="parallax">
+        <img src="img/street.jpg" alt="" class="responsive-img" />
+      </div>
+    </div>
+    <div class="container">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae
+        tellus ut sapien commodo tristique in sed eros. Morbi tempus sit amet
+        felis a tempor.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae
+        tellus ut sapien commodo tristique in sed eros. Morbi tempus sit amet
+        felis a tempor.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae
+        tellus ut sapien commodo tristique in sed eros. Morbi tempus sit amet
+        felis a tempor.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae
+        tellus ut sapien commodo tristique in sed eros. Morbi tempus sit amet
+        felis a tempor.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae
+        tellus ut sapien commodo tristique in sed eros. Morbi tempus sit amet
+        felis a tempor.
+      </p>
+    </div>
+    <div class="parallax-container">
+      <div class="parallax">
+        <img src="img/stars.jpg" alt="" class="responsive-img" />
+      </div>
+    </div>
+    <div class="container">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae
+        tellus ut sapien commodo tristique in sed eros. Morbi tempus sit amet
+        felis a tempor.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae
+        tellus ut sapien commodo tristique in sed eros. Morbi tempus sit amet
+        felis a tempor.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae
+        tellus ut sapien commodo tristique in sed eros. Morbi tempus sit amet
+        felis a tempor.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae
+        tellus ut sapien commodo tristique in sed eros. Morbi tempus sit amet
+        felis a tempor.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae
+        tellus ut sapien commodo tristique in sed eros. Morbi tempus sit amet
+        felis a tempor.
+      </p>
+    </div>
     <!-- services / tabs -->
 
     <!-- parallax -->
