--- a/index.html
+++ b/index.html
@@ -108,33 +108,57 @@
         <img src="img/street.jpg" alt="" class="responsive-img" />
       </div>
     </div>
-    <div class="container">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae
-        tellus ut sapien commodo tristique in sed eros. Morbi tempus sit amet
-        felis a tempor.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae
-        tellus ut sapien commodo tristique in sed eros. Morbi tempus sit amet
-        felis a tempor.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae
-        tellus ut sapien commodo tristique in sed eros. Morbi tempus sit amet
-        felis a tempor.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae
-        tellus ut sapien commodo tristique in sed eros. Morbi tempus sit amet
-        felis a tempor.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae
-        tellus ut sapien commodo tristique in sed eros. Morbi tempus sit amet
-        felis a tempor.
-      </p>
-    </div>
+
+    <section class="container section" id="services">
+      <div class="row">
+        <div class="col s12 l4">
+          <h2 class="indigo-text text-darken-4">What I do...</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+            vitae tellus ut sapien commodo tristique in sed eros.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+            vitae tellus ut sapien commodo tristique in sed eros.
+          </p>
+        </div>
+        <div class="col s12 l6 offset-l2">
+          <ul class="tabs">
+            <li class="tab col s6">
+              <a href="#photogrphy" class="indigo-text text-darken-4">Photography</a>
+            </li>
+            <li class="tab col s6">
+              <a href="#editing" class="indigo-text text-darken-4">Editing</a>
+            </li>
+          </ul>
+          <div class="col s12" id="photogrphy">
+            <p class="indigo-text flow-text text-darken-4">PHOTOGRAPHY</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+              laoreet congue elit. Nullam in velit non libero pretium semper.
+              Pellentesque id rutrum erat. Etiam ullamcorper arcu a leo pharetra
+              convallis. Vivamus sollicitudin elit at pharetra placerat. Aliquam
+              ipsum mi, ornare ac mauris eu, finibus mollis est. Aenean semper
+              commodo ornare.
+            </p>
+          </div>
+
+          <div class="col s12" id="editing">
+            <p class="indigo-text flow-text text-darken-4">EDITING</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+              laoreet congue elit. Nullam in velit non libero pretium semper.
+              Pellentesque id rutrum erat. Etiam ullamcorper arcu a leo pharetra
+              convallis. Vivamus sollicitudin elit at pharetra placerat. Aliquam
+              ipsum mi, ornare ac mauris eu, finibus mollis est. Aenean semper
+              commodo ornare.
+            </p>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
     <div class="parallax-container">
       <div class="parallax">
         <img src="img/stars.jpg" alt="" class="responsive-img" />
