add contact section

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <img src="img/street.jpg" alt="" class="responsive-img" />
       </div>
     </div>
-
+    <!-- services / tabs -->
     <section class="container section" id="services">
       <div class="row">
         <div class="col s12 l4">
@@ -125,7 +125,9 @@
         <div class="col s12 l6 offset-l2">
           <ul class="tabs">
             <li class="tab col s6">
-              <a href="#photogrphy" class="indigo-text text-darken-4">Photography</a>
+              <a href="#photogrphy" class="indigo-text text-darken-4"
+                >Photography</a
+              >
             </li>
             <li class="tab col s6">
               <a href="#editing" class="indigo-text text-darken-4">Editing</a>
@@ -154,49 +156,76 @@
               commodo ornare.
             </p>
           </div>
-
         </div>
       </div>
     </section>
-
+    <!-- parallax -->
     <div class="parallax-container">
       <div class="parallax">
         <img src="img/stars.jpg" alt="" class="responsive-img" />
       </div>
     </div>
-    <div class="container">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae
-        tellus ut sapien commodo tristique in sed eros. Morbi tempus sit amet
-        felis a tempor.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae
-        tellus ut sapien commodo tristique in sed eros. Morbi tempus sit amet
-        felis a tempor.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae
-        tellus ut sapien commodo tristique in sed eros. Morbi tempus sit amet
-        felis a tempor.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae
-        tellus ut sapien commodo tristique in sed eros. Morbi tempus sit amet
-        felis a tempor.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae
-        tellus ut sapien commodo tristique in sed eros. Morbi tempus sit amet
-        felis a tempor.
-      </p>
-    </div>
-    <!-- services / tabs -->
-
-    <!-- parallax -->
-
     <!-- contact form -->
+    <section class="section container" id="contact">
+      <div class="row">
+        <div class="col s12 l5">
+          <h2 class="indigo-text text-darken-4">Get in touch</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing.
+          </p>
+        </div>
 
+        <div class="col s12 l5 offset-l2">
+          <form action="" method="post">
+            <div class="input-field">
+              <i class="material-icons prefix">email</i>
+              <input type="text" id="email" />
+              <label for="email">Your Email</label>
+            </div>
+
+            <div class="input-field">
+              <i class="material-icons prefix">message</i>
+              <textarea id="message" class="materialize-textarea"></textarea>
+              <label for="message">Your Message</label>
+            </div>
+            <div class="input-field">
+              <input type="text" id="date" class="datepicker" />
+              <label for="date">Choose a date you need...</label>
+            </div>
+
+            <div class="input-field">
+              <input type="text" id="time" class="timepicker" />
+              <label for="time">Choose a time you need...</label>
+            </div>
+
+            <div class="input-field">
+              <p>
+                <label>
+                  <input type="checkbox" />
+                  <span>Photography</span>
+                </label>
+              </p>
+
+              <p>
+                <label>
+                  <input type="checkbox" />
+                  <span>Editing</span>
+                </label>
+              </p>
+            </div>
+            <div class="input-field center">
+              <button type="submit" class="btn">Submit</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
     <!-- footer -->
 
     <!-- Compiled and minified JavaScript -->
