--- a/index.html
+++ b/index.html
@@ -35,9 +35,21 @@
             <i class="material-icons">menu</i>
           </a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="#">Photo's</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#photos">Photo's</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-tooltip="Instagram">
+              <i class="fab fa-instagram"></i>
+            </a></li>
+            <li><a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-tooltip="Facebook">
+              <i class="fab fa-facebook"></i>
+            </a></li>
+            <li><a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-tooltip="Twitter">
+              <i class="fab fa-twitter"></i>
+            </a></li>
+            <li><a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-tooltip = "LinkedIn">
+              <i class="fab fa-linkedIn"></i>
+            </a></li>
           </ul>
 
           <ul class="sidenav grey lighten-2" id="mobile-menu">
@@ -49,7 +61,7 @@
       </nav>
     </header>
     <!-- photo / grid -->
-    <section class="container section" id="photo's">
+    <section class="container section scrollspy" id="photos">
       <div class="row">
         <div class="col s12 l4">
           <img
@@ -109,7 +121,7 @@
       </div>
     </div>
     <!-- services / tabs -->
-    <section class="container section" id="services">
+    <section class="container section scrollspy" id="services">
       <div class="row">
         <div class="col s12 l4">
           <h2 class="indigo-text text-darken-4">What I do...</h2>
@@ -166,7 +178,7 @@
       </div>
     </div>
     <!-- contact form -->
-    <section class="section container" id="contact">
+    <section class="section container scrollspy" id="contact">
       <div class="row">
         <div class="col s12 l5">
           <h2 class="indigo-text text-darken-4">Get in touch</h2>
